// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should print empty test file 1`] = `" EMPTY   /tests/file1.test.ts"`;

exports[`should print empty test file 2`] = `
"
 PASS   /tests/file1.test.ts   2ms
    ● test (empty)   
   ✔️  subtest   1ms EMPTY   /tests/file2.test.ts"
`;

exports[`should print for a empty test file name 1`] = `
"
 PASS   /tests/file1.test.ts   2ms
   ✔️  <empty test name>   "
`;

exports[`should print report for 1 test file, 1 test clausure and 1 failed function and 1 passed function 1`] = `
"
 FAIL   /tests/file1.test.ts   3ms
   ❌ group -> test case1   1ms
    
    expected: hireceived: hi!
"
`;

exports[`should print report for 1 test file, 1 test clausure and 1 failed function and 1 passed function 2`] = `
"
 FAIL   /tests/file1.test.ts   2ms
   ❌ group -> test case1   
    
    expected: hireceived: hi!
"
`;

exports[`should print report for 1 test file, 1 test clausure and 1 test function 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
   ✔️  group -> test case1   3ms"
`;

exports[`should print report for 1 test file, 1 test clausure and 1 test function that fail 1`] = `
"
 FAIL   /tests/file1.test.ts   2ms
   ❌ group -> test case1   1ms
    
    expected: hireceived: hi!
"
`;

exports[`should print report for 1 test file, 1 test clausure and 2 test function 1`] = `
"
 PASS   /tests/file1.test.ts   4ms
   ✔️  group -> test case1   1ms"
`;

exports[`should print report for 1 test file, 2 test clausure and 1 failed function and 1 passed function 1`] = `
"
 FAIL   /tests/file1.test.ts   7ms
   ❌ group -> test case1   1ms
    
    expected: hireceived: hi!

   ❌ group -> test case2   3ms
    
    expected: hireceived: hi!
"
`;

exports[`should print report for 1 test file, 2 test clausure and 1 failed function and 1 passed function 2`] = `
"
 FAIL   /tests/file1.test.ts   3ms
   ✔️  group name -> test case1   1ms
   ❌ group name -> test case2   1ms
    
    expected: hireceived: hi!
"
`;

exports[`should print report for 1 test file, 2 test clausure and 1 failed function and 1 passed function 3`] = `
"
 FAIL   /tests/file1.test.ts   2ms
   ❌ group -> test case1   1ms
    
    - expect    - 1
    + received  + 1
    
      Object {
    -   \\"a\\": 1,
    +   \\"a\\": 2,
      }
"
`;

exports[`should print report for 2 test file, 1 test clausure and 1 test function 1`] = `
"
 PASS   /tests/file1.test.ts   2ms
   ✔️  group -> test case1   
 PASS   /tests/file2.test.ts   2ms
   ✔️  group -> test case1   1ms"
`;

exports[`should print report for 2 test file, 1 test clausure and 2 test function 1`] = `
"
 PASS   /tests/file1.test.ts   1ms
   ✔️  group -> test case1   1ms
 PASS   /tests/file2.test.ts   4ms
   ✔️  group -> test case1   1ms"
`;

exports[`should print report for 2 test file, 2 test clausure and 1 failed function and 1 passed function 1`] = `
"
 FAIL   /tests/file1.test.ts   5ms
   ❌ group -> test case1   
    
    expected: hireceived: hi!

   ❌ group -> test case2   1ms
    
    expected: hireceived: hi!

 FAIL   /tests/file2.test.ts   5ms
   ❌ group -> test case1   
    
    expected: hireceived: hi!

   ❌ group -> test case2   1ms
    
    expected: hireceived: hi!
"
`;

exports[`should print report for 2 test file, 2 test clausure and 2 test function 1`] = `
"
 PASS   /tests/file1.test.ts   3ms
   ✔️  group -> test case1   
   ✔️  group -> test case2   1ms
 PASS   /tests/file2.test.ts   4ms
   ✔️  group -> test case1   1ms
   ✔️  group -> test case2   1ms"
`;

exports[`should print subtest for a subgroup 1`] = `
"
 PASS   /tests/file1.test.ts   2ms
    ● test (empty)   
   ✔️  subtest   "
`;

exports[`should print tests for a subgroup 1`] = `
"
 PASS   /tests/file1.test.ts   1ms
   ✔️  test   "
`;
